--- a/css/style.css
+++ b/css/style.css
@@ -577,6 +577,7 @@ input.error {
 .service-button {
   position: absolute;
   bottom: 20px;
+  cursor:pointer;
 }
 .service-button > a {
   pointer-events: none;
@@ -803,6 +804,29 @@ p.services-image_mobile {
 #documents {
   background: url("../images/document-bg.jpg");
 }
+.text-center {
+  position: relative;
+}
+.popup-img {
+  position: fixed;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(43, 43, 43, .8);
+  z-index: 0;
+  opacity: 0;
+  transition: opacity .5s, left .5s;
+}
+.popup-img img {
+  max-height: 90%;
+  margin-top: 1.5%;
+}
+.popup-img--active {
+  opacity: 1;
+  z-index: 99;
+  left: 0;
+}
 .document-inner {
   display: inline-block;
   position: relative;
@@ -817,6 +841,7 @@ p.services-image_mobile {
   top: 0;
   left: 0;
   opacity: 0;
+  z-index: 3;
 }
 .document-inner:hover .document-overlay {
   opacity: 1;
@@ -1699,6 +1724,15 @@ input.error {
   right: 25px;
   bottom: 25px;
   transform: rotate(90deg);
+  opacity: 0;
+  cursor: pointer;
+  transition: opacity .3s;
+}
+.smooth-scroll__img {
+  pointer-events: none;
+}
+.smooth-scroll--active {
+  opacity: 1;
 }
 
 @media (max-width: 576px) {
